# GeoCalib

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gradio_app.py  hubconf.py  pyproject.toml  requirements.txt
geocalib/: __init__.py  camera.py  extractor.py  geocalib.py  gravity.py  interactive_demo.py  lm_optimizer.py  misc.py  modules.py  perspective_fields.py  utils.py  viz2d.py
siclib/: __init__.py  pose_estimation.py  pyproject.toml  requirements.txt  settings.py  train.py
siclib/configs/: deepcalib.yaml  geocalib-radial.yaml  geocalib.yaml
siclib/configs/data/: openpano-radial.yaml  openpano.yaml
siclib/configs/model/: deepcalib.yaml  geocalib.yaml
siclib/configs/train/: deepcalib.yaml  geocalib.yaml
siclib/datasets/: __init__.py  augmentations.py  base_dataset.py  create_dataset_from_pano.py  simple_dataset.py
siclib/datasets/configs/: openpano-radial.yaml  openpano.yaml
siclib/eval/: __init__.py  eval_pipeline.py  inspect.py  io.py  lamar2k.py  megadepth2k.py  megadepth2k_radial.py  openpano.py  openpano_radial.py  run_perceptual.py  simple_pipeline.py  stanford2d3d.py  tartanair.py  utils.py
siclib/geometry/: base_camera.py  camera.py  gradient_checker.py  gravity.py  jacobians.py  manifolds.py  perspective_fields.py
siclib/models/: __init__.py  base_model.py  cache_loader.py  extractor.py
siclib/utils/: conversions.py  experiments.py  export_predictions.py  image.py  stdout_capturing.py  summary_writer.py  tensor.py  tools.py
siclib/visualization/: global_frame.py  tools.py  two_view_frame.py  visualize_batch.py  viz2d.py
(+30 files in other folders)
