[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geocalib"
version = "1.0"
description = "GeoCalib Inference Package"
authors = [
    { name = "Alexander Veicht" },
    { name = "Paul-Edouard Sarlin" },
    { name = "Philipp Lindenberger" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
urls = { Repository = "https://github.com/cvg/GeoCalib" }

dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["black==23.9.1", "flake8", "isort==5.12.0"]

[tool.setuptools]
packages = ["geocalib"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }


[tool.black]
line-length = 100
exclude = "(venv/|docs/|third_party/)"

[tool.isort]
profile = "black"
line_length = 100
atomic = true

[tool.flake8]
max-line-length = 100
docstring-convention = "google"
ignore = ["E203", "W503", "E402"]
exclude = [".git", "__pycache__", "venv", "docs", "third_party", "scripts"]
